k8s/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: log-agent
spec:
  selector:
    matchLabels:
      app: log-agent
  template:
    metadata:
      labels:
        app: log-agent
    spec:
      containers:
        - name: log-agent
          image: busybox
          command: ["/bin/sh", "-c", "tail -F /var/log/example-app/app.log"]
          volumeMounts:
            - name: app-logs
              mountPath: /var/log/example-app
      volumes:
        - name: app-logs
          hostPath:
            path: /var/log/example-app
            type: DirectoryOrCreate
