k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: example-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
